intervalsets-macros/tests/ui/set_notation.stderr
error: `{...}` is set notation; `interval!` produces a single interval (use `{}` for the empty interval)
 --> tests/ui/set_notation.rs:4:23
  |
4 |     let _ = interval!("{[0, 5], [10, 15]}");
  |                       ^^^^^^^^^^^^^^^^^^^^
