intervalsets-macros/tests/ui/set_notation.rs
use intervalsets_macros::interval;

fn main() {
    let _ = interval!("{[0, 5], [10, 15]}");
}
